syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc ListUsers (ListUsersRequest) returns (UserListResponse);
}

message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
}

message GetUserRequest {
  int32 user_id = 1;
}

message ListUsersRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message UserResponse {
  int32 id = 1;
  string email = 2;
  string username = 3;
  bool is_active = 4;
  string created_at = 5;
}

message UserListResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
}